         ellweilcurve, ellpadicbsd, ellpadicregulator
BA  128- New GP function lfuntwist
    129- [libpari] mkmat22, mkmat22s, Qp_agm2_sequence, Qp_ascending_Landen,
         Qp_descending_Landen
BA  130- [libpari] famat_pows_shallow, famat_mulpows_shallow
    131- [libpari] QXQ_div_ratlift, ZM_equal0, QM_ImZ_hnfall, QM_ImQ_hnfall
BA  132- [libpari] FpXn_mul, FpXn_sqr, RgXn_recip_shallow, FpXn_exp
BA  133- [libpari] FpX_integ, FpX_convol

  Changed
      1- rewrite bnfnarrow
      2- the bid struct from idealstar has been changed, the new format is
         not compatible with pari-2.9
      3- bnrdisclist output is now an ordinary vector (not a vector of vectors)
      4- made nfsign() / nfsign_arch() reliable [ use algebraic method
         besides floating point approximation to real embeddings ]
      5- support ??refcard-ell  (or mf/nf/lfun)
      6- [libpari internals] bnrinit(,,1) [with generators] is no longer
         necessary for bnrsurjection()
      7- bnrinit(,,1) is no longer necessary for bnrL1, bnrconductor,
         bnrrootnumber, bnrstark, rnfkummer, galoissubcyclo
      8- msfromell: use a (much faster) modular algorithm, allow a vector
         of isogenous curves
      9- mseval(W,s,p): allow 2x2 matrix for the path 'p' argument
     10- allow mseval(W, t_MAT, p) to evaluate many symbols simultaneously
     11- allow polrootsreal() and polsturm() with non-rational real polynomials
         (input is rounded first)
BA   12- FlxX_shift did not support negative (left) shift.
BA   13- [libpari] rename FpX_fromdigits -> FpXV_FpX_fromdigits,
         FpXQX_fromdigits -> FpXQXV_FpXQX_fromdigits
     14- made lngamma(t_COMPLEX) faster
     15- made sumnummonieninit(,1) faster
HC   16- sumnummonieninit(a) for [a,a] did not conform to documentation.
         Change to sumnummonieninit(b) for [1,b]
     17- improve prime() and primepi() by adding more checkpoints [#1878]
     18- lfun(Dirichlet character): switch automatically to lfunchiquad