@@ -570,6 +570,7 @@ GEN     FpX_FpV_multieval(GEN P, GEN xa, GEN p);
 GEN     FpX_FpXQ_eval(GEN f,GEN x,GEN T,GEN p);
 GEN     FpX_FpXQV_eval(GEN f,GEN x,GEN T,GEN p);
 GEN     FpX_Frobenius(GEN T, GEN p);
+GEN     FpX_Newton(GEN P, long n, GEN p);
 GEN     FpX_add(GEN x, GEN y, GEN p);
 GEN     FpX_center(GEN x, GEN p, GEN pov2);
 GEN     FpX_chinese_coprime(GEN x,GEN y,GEN Tx,GEN Ty,GEN Tz,GEN p);
@@ -582,6 +583,7 @@ GEN     FpX_divrem(GEN x, GEN y, GEN p, GEN *pr);
 GEN     FpX_dotproduct(GEN x, GEN y, GEN p);
 GEN     FpX_eval(GEN x,GEN y,GEN p);
 GEN     FpX_extgcd(GEN x, GEN y, GEN p, GEN *ptu, GEN *ptv);
+GEN     FpX_fromNewton(GEN P, GEN p);
 GEN     FpX_gcd(GEN x, GEN y, GEN p);
 GEN     FpX_gcd_check(GEN x, GEN y, GEN p);
 GEN     FpX_get_red(GEN T, GEN p);
